fix card wrap problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -25,18 +25,30 @@
   font-size: 20px;
 }
 
-#results {
-  display: block;
-  margin: 40px;
+.bestguess {
+  margin-bottom: 150px;
 }
+
+#answers {
+  width: 100%;
+  max-height: 3000px;
+  overflow: scroll;
+  white-space: nowrap;
+}
+
+
 
 .card {
   margin: 20px;
+  height: 700px;
   max-width: 350px;
-  height: 450px;
-  float: left;
-  display: none;
+  float: none;
+  display: inline-block;
+  text-overflow: clip;
+  overflow: hidden;
+  white-space: normal;
 }
+
 
 .questiongroup {
   margin: 35px;
